--- a/share.html
+++ b/share.html
@@ -61,7 +61,7 @@
           contents: [
             {
               type: "image",
-              url: "https://img2.pic.in.th/pic/head5.png",
+              url: "https://img2.pic.in.th/pic/-E-Book-4.gif",
               aspectRatio: "7:1",
               align: "center",
               gravity: "center",
