--- a/share.html
+++ b/share.html
@@ -81,7 +81,7 @@
               contents: [
                 {
                   type: "image",
-                  url: "https://img5.pic.in.th/file/secure-sv1/w13b16683eb845d5ce.png",
+                  url: "ddddddddddddddddddddddddd",
                   aspectRatio: "129:79",
                   aspectMode: "fit",
                   backgroundColor: "#b3baff",
