--- a/share.html
+++ b/share.html
@@ -61,12 +61,17 @@
           contents: [
             {
               type: "image",
-              url: "https://img2.pic.in.th/pic/-E-Book-4.gif",
+              url: "https://safemode63.github.io/libafaps/ebook-banner-preview.gif",
               aspectRatio: "7:1",
               align: "center",
               gravity: "center",
               aspectMode: "cover",
-              size: "full"
+              size: "full",
+              action: {
+                type: "uri",
+                label: "ดูวิดีโอ",
+                uri: "https://liff.line.me/2007236505-N3aoxxJp/video"
+              }
             }
           ],
           paddingAll: "none"
@@ -81,7 +86,7 @@
               contents: [
                 {
                   type: "image",
-                  url: "ddddddddddddddddddddddddd",
+                  url: "https://img2.pic.in.th/pic/-E-Book-4.gif",
                   aspectRatio: "129:79",
                   aspectMode: "fit",
                   backgroundColor: "#b3baff",
