--- a/share.html
+++ b/share.html
@@ -61,17 +61,12 @@
           contents: [
             {
               type: "image",
-              url: "https://safemode63.github.io/libafaps/ebook-banner-preview.gif",
+              url: "https://img2.pic.in.th/pic/-E-Book-4.gif",
               aspectRatio: "7:1",
               align: "center",
               gravity: "center",
               aspectMode: "cover",
-              size: "full",
-              action: {
-                type: "uri",
-                label: "ดูวิดีโอ",
-                uri: "https://liff.line.me/2007236505-N3aoxxJp/video"
-              }
+              size: "full"
             }
           ],
           paddingAll: "none"
@@ -86,7 +81,7 @@
               contents: [
                 {
                   type: "image",
-                  url: "https://img2.pic.in.th/pic/-E-Book-4.gif",
+                  url: "ddddddddddddddddddddddddd",
                   aspectRatio: "129:79",
                   aspectMode: "fit",
                   backgroundColor: "#b3baff",
